[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-mac"
version = "0.1.0"
description = "TurboQuant (ICLR 2026) ported to Apple Silicon — KV cache compression with MLX Metal kernels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Yahav Zamari", email = "yzamari@users.noreply.github.com"},
]
keywords = [
    "turboquant", "kv-cache", "quantization", "mlx", "apple-silicon",
    "metal", "llm", "transformers", "attention", "inference",
    "compression", "iclr", "polarquant", "qjl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/yzamari/turboQuantPlayground"
Repository = "https://github.com/yzamari/turboQuantPlayground"
Issues = "https://github.com/yzamari/turboQuantPlayground/issues"
Paper = "https://arxiv.org/abs/2504.19874"

[project.optional-dependencies]
mlx = ["mlx>=0.22"]
torch = ["torch>=2.1"]
dev = ["pytest>=7.0", "jupyter", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
turboquant_mac = ["codebooks/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
